trunk/Archive2/20/0ec1341efce1a7/output
main.cpp: In function 'int main()':
main.cpp:27:5: error: static assertion failed: equals 5
     static_assert( f5.at(123) != 5, "equals 5");
     ^
